<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locGen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_paper_2"
    tools:context=".RandomLOCGenerator">

    <LinearLayout
        android:id="@+id/locGen_focusCatcher_layout"
        android:layout_width="0px"
        android:layout_height="0px"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <ImageButton
        android:id="@+id/locGen_generate_button"
        android:layout_width="181dp"
        android:layout_height="174dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/locGen_resetLocks_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stickynote" />

    <ImageButton
        android:id="@+id/locGen_resetLocks_button"
        android:layout_width="124dp"
        android:layout_height="89dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/stickynote2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locGen_class_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/locGen_header_layout">

        <TextView
            android:id="@+id/locGen_class_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_class"
            android:textAlignment="center"
            android:textAppearance="@style/content_2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locGen_subclass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_subclass"
            android:textAlignment="center"
            android:textAppearance="@style/content_1"
            app:layout_constraintTop_toBottomOf="@+id/locGen_class_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locGen_back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/locGen_back_button"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:background="@null"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tapebutton2" />

        <TextView
            android:id="@+id/locGen_back_buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_back"
            android:textAppearance="@style/button_2"
            app:layout_constraintBottom_toBottomOf="@id/locGen_back_button"
            app:layout_constraintEnd_toEndOf="@id/locGen_back_button"
            app:layout_constraintStart_toStartOf="@id/locGen_back_button"
            app:layout_constraintTop_toTopOf="@id/locGen_back_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locGen_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/locGen_header1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locGen_header1"
            android:textAlignment="center"
            android:textAppearance="@style/header_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locGen_header2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="0sp"
            android:text="@string/locGen_header2"
            android:textAlignment="center"
            android:textAppearance="@style/header_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locGen_header1_text" />

        <TextView
            android:id="@+id/locGen_header3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locGen_header3"
            android:textAlignment="center"
            android:textAppearance="@style/header_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locGen_header2_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locGen_linesLeft_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/locGen_generate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locGen_class_layout">

        <ImageView
            android:id="@+id/locGen_lineWhiteout1_image"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whiteout"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/locGen_lineWhiteout3_image"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locGen_lineWhiteout1_image"
            app:srcCompat="@drawable/whiteout"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/locGen_line1_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text|textCapCharacters"
            android:maxLength="3"
            android:text="@string/locGen_line1_default"
            android:textAlignment="center"
            android:textAppearance="@style/content_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locGen_lineWhiteout1_image" />

        <EditText
            android:id="@+id/locGen_line3_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text|textCapCharacters"
            android:maxLength="5"
            android:text="@string/locGen_line3_default"
            android:textAlignment="center"
            android:textAppearance="@style/content_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locGen_lineWhiteout3_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locGen_linesRight_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/locGen_generate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locGen_class_layout">

        <ImageView
            android:id="@+id/locGen_lineWhiteout2_image"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whiteout"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/locGen_lineWhiteout4_image"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locGen_lineWhiteout2_image"
            app:srcCompat="@drawable/whiteout"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/locGen_line4_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:text="@string/locGen_line4_default"
            android:textAlignment="center"
            android:textAppearance="@style/content_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locGen_lineWhiteout4_image" />

        <EditText
            android:id="@+id/locGen_line2_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:text="@string/locGen_line2_default"
            android:textAlignment="center"
            android:textAppearance="@style/content_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locGen_lineWhiteout2_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>