<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ficGen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_paper_2"
    tools:context=".RandomFictionGenerator">

    <ImageButton
        android:id="@+id/ficGen_generate_button"
        android:layout_width="181dp"
        android:layout_height="174dp"
        android:layout_marginBottom="100dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/ficGen_back_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stickynote" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ficGen_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ficGen_header1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ficGen_header1"
            android:textAlignment="center"
            android:textAppearance="@style/header_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ficGen_header2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="0sp"
            android:text="@string/ficGen_header2"
            android:textAlignment="center"
            android:textAppearance="@style/header_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ficGen_header1_text" />

        <TextView
            android:id="@+id/ficGen_header3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ficGen_header3"
            android:textAlignment="center"
            android:textAppearance="@style/header_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ficGen_header2_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ficGen_author_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/ficGen_generate_button"
        app:layout_constraintTop_toBottomOf="@+id/ficGen_header_layout">

        <ImageView
            android:id="@+id/ficGen_authorInkSplotch_image"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="45dp"
            android:rotation="-180"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/ficGen_author_text"
            app:layout_constraintStart_toStartOf="@+id/ficGen_author_text"
            app:layout_constraintTop_toTopOf="@id/ficGen_author_text"
            app:srcCompat="@drawable/inksplotch" />

        <TextView
            android:id="@+id/ficGen_author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_author"
            android:textAlignment="center"
            android:textAppearance="@style/content_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ficGen_back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ficGen_back_button"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:background="@null"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tapebutton2" />

        <TextView
            android:id="@+id/ficGen_back_buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_back"
            android:textAppearance="@style/button_2"
            app:layout_constraintBottom_toBottomOf="@id/ficGen_back_button"
            app:layout_constraintEnd_toEndOf="@id/ficGen_back_button"
            app:layout_constraintStart_toStartOf="@id/ficGen_back_button"
            app:layout_constraintTop_toTopOf="@id/ficGen_back_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>